# arrow-practices

./: .gitattributes  .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  CMakePresets.json  build_linux.sh  build_windows.bat
cpp/chapter1/: CMakeLists.txt  example_101.cpp  main.cpp
cpp/chapter4/: CMakeLists.txt  export_cdata.cpp
cpp/chapter5/: CMakeLists.txt  compute_functions.cpp
cpp/chapter5v2/: CMakeLists.txt  compute_or_not.cpp  timer.hpp
cpp/chapter5v3/: CMakeLists.txt  simple_acero.cpp
cpp/chapter7/: CMakeLists.txt  flight_client.cpp
cpp/cmake/: Platform.cmake
python/: 010_random_record_batch_generator.py  020_generate_files.py  030_memory_usage.py  040_example_cdata.py  050_compute_functions.py  070_flight_client.py  070_flight_server.py
python/arrow_flight/: flight_server.py  generate_data.py  test_service.ipynb  utils.py
python/notebooks/: 010_arrow_sql.ipynb  020_polars_example.ipynb
